updated BotLogicTests